--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="timeBackground">
       <h1 id="timer">00 : 00 : 000</h1>
       <div>
-        <button id="run">Start</button> <button id="pause">Pause</button>
+        <button id="run">Start</button> <button id="pause">&#10074; &#10074;</button>
         <button id="reset">Reset</button>
       </div>
     </div>
@@ -18,7 +18,7 @@
     <div class="timeBackground">
       <h1 id="timer2">00 : 00 : 000</h1>
       <div>
-        <button id="run">Start</button> <button id="pause">Pause</button>
+        <button id="run">Start</button> <button id="pause">&#10074; &#10074;</button>
         <button id="reset">Reset</button>
       </div>
     </div>
@@ -26,12 +26,12 @@
     <div class="timeBackground">
       <h1 id="timer3">00 : 00 : 000</h1>
       <div>
-        <button id="run">Start</button> <button id="pause">Pause</button>
+        <button id="run">Start</button> <button id="pause">&#10074; &#10074;</button>
         <button id="reset">Reset</button>
       </div>
     </div>
     <div class="allControl">
-      <button id="runAll">Start</button> <button id="pauseAll">Pause</button>
+      <button id="runAll">Start</button> <button id="pauseAll">&#10074; &#10074;</button>
       <button id="resetAll">Reset</button>
     </div>
 
