adjusted the rules

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <script src="js/main.js"></script>
     <script src="js/pause.js"></script>
     <script src="js/reset.js"></script>
+    <script src="js/removefunc.js"></script>
     <script src="js/start.js"></script>
   </body>
 </html>
